--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,9 +3,11 @@ Type: Package
 Title: Use Shiny to Demo igraph
 Version: 0.1
 Date: 2016-01-12
-Author: Ming-Jer Lee
+Author: person("Ming-Jer", "Lee", email="mingjerli@gmail.com")
 Maintainer: Ming-Jer Lee <mingjerli@gmail.com>
-Depends: shiny, igraph
+Imports:
+    shiny,
+    igraph
 Description: Using Shiny to demo igraph package makes learning graph theory easy and fun.
 License: GPL (>= 2)
 LazyData: TRUE
