--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: igraphinshiny
 Type: Package
-Title: Use Shiny to Demo igraph
+Title: Use 'shiny' to Demo 'igraph'
 Version: 0.1
 Date: 2016-01-12
 Authors@R: person("Ming-Jer", "Lee", email = "mingjerli@gmail.com",
@@ -9,7 +9,7 @@ Depends: R (>= 3.2.0)
 Imports:
     shiny,
     igraph
-Description: Using Shiny to demo igraph package makes learning graph theory easy and fun.
+Description: Using 'shiny' to demo 'igraph' package makes learning graph theory easy and fun.
 License: GPL (>= 2)
 LazyData: TRUE
 KeepSource: TRUE
